; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_do_check.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/mkdosfs/extr_mkdosfs.c_do_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dev = common dso_local global i32 0, align 4
@BLOCK_SIZE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"seek failed during testing for blocks\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"Unexpected values in do_check: probably bugs\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32, i32)* @do_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @do_check(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @dev, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @BLOCK_SIZE, align 4
  %11 = mul nsw i32 %9, %10
  %12 = load i32, i32* @SEEK_SET, align 4
  %13 = call i32 @llseek(i32 %8, i32 %11, i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @BLOCK_SIZE, align 4
  %16 = mul nsw i32 %14, %15
  %17 = icmp ne i32 %13, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = call i32 @die(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %3
  %21 = load i32, i32* @dev, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @BLOCK_SIZE, align 4
  %25 = mul nsw i32 %23, %24
  %26 = call i64 @read(i32 %21, i8* %22, i32 %25)
  store i64 %26, i64* %7, align 8
  %27 = load i64, i64* %7, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store i64 0, i64* %7, align 8
  br label %30

30:                                               ; preds = %29, %20
  %31 = load i64, i64* %7, align 8
  %32 = load i32, i32* @BLOCK_SIZE, align 4
  %33 = sub nsw i32 %32, 1
  %34 = sext i32 %33 to i64
  %35 = and i64 %31, %34
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %30
  %38 = call i32 @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0))
  br label %39

39:                                               ; preds = %37, %30
  %40 = load i32, i32* @BLOCK_SIZE, align 4
  %41 = sext i32 %40 to i64
  %42 = load i64, i64* %7, align 8
  %43 = sdiv i64 %42, %41
  store i64 %43, i64* %7, align 8
  %44 = load i64, i64* %7, align 8
  ret i64 %44
}

declare dso_local i32 @llseek(i32, i32, i32) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i64 @read(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
